# Barista

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  CODE_REVIEW.md  Dockerfile  README.md  env.example  menu.md  pyproject.toml
backend/agent/: graph.py
backend/app/: __init__.py  config.py  main.py
backend/app/knowledge/: __init__.py  ingestion.py  rag.py
backend/app/llm/: __init__.py  factory.py
backend/app/memory/: __init__.py  store.py
backend/app/routes/: __init__.py  chat.py  health.py  voice.py
backend/app/tools/: __init__.py  availability.py  image_gen.py  promotions.py
frontend/: .dockerignore  Dockerfile  ENVIRONMENT.md  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatInterface.tsx
frontend/types/: speech.d.ts
